// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Avatar > should render Avatar with github url 1`] = `
<div>
  <div
    class="_Avatar_69744d"
  >
    <img
      class="_foobarImage_69744d"
      src="https://avatars.githubusercontent.com/foobar"
    />
  </div>
</div>
`;

exports[`Avatar > should render Avatar with gravatar url 1`] = `
<div>
  <div
    class="_Avatar_69744d"
  >
    <img
      class="_foobarImage_69744d"
      src="https://www.gravatar.com/avatar/0c7e6a405862e402eb76a70f8a26fc732d07c32931e9fae9ab1582911d2e8a3b?d=mp"
    />
  </div>
</div>
`;

exports[`Avatar > should render error 1`] = `
<div>
  <div
    class="_Avatar_69744d"
  >
    <div
      class="_foobarPlaceholder_69744d"
    />
  </div>
</div>
`;

exports[`Avatar > should render loading 1`] = `
<div>
  <div
    class="_Avatar_69744d"
  >
    <div
      class="_foobarPlaceholder_69744d"
    />
  </div>
</div>
`;
